--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,26 @@
 name = "babylm-seqlen"
 version = "0.1.0"
 description = "Train language models on BabyLM with variable sequence lengths"
-dependencies = [
-    "transformers>=4.40.0",
-    "datasets",
-    "deepspeed",
-    "torch",
-    "accelerate",
-    "wandb",
-    "mamba-ssm @ git+https://github.com/state-spaces/mamba.git",
-]
+readme = "README.md"
+requires-python = ">=3.10,<3.13"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[project.dependencies]
+python = ">=3.10,<3.13"
+wandb = "^0.18.1"
+huggingface-hub = { extras = ["cli"], version = "^0.25.1" }
+datasets = ">=3.0.1,<3.2.0"
+transformers = "^4.45.2"
+pre-commit = "^4.0.1"
+torch = "^2.5.1"
+evaluate = "^0.4.3"
+deepspeed = "^0.16.2"
+rich = "^13.9.4"
+accelerate = "*"
+mamba-ssm = { git = "https://github.com/state-spaces/mamba.git" }
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
