--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-wandb==0.18.1
-huggingface-hub[cli]==0.25.1
-datasets>=3.0.1,<3.2.0
-transformers==4.45.2
-pre-commit==4.0.1
-torch==2.5.1
-evaluate==0.4.3
-deepspeed==0.16.2
-rich==13.9.4
+transformers==4.39.3
+datasets==2.19.1
+evaluate==0.4.1
+wandb
+scikit-learn
+tqdm
+pyyaml
+sentencepiece
+einops
 accelerate
-mamba-ssm @ git+https://github.com/state-spaces/mamba.git
+peft
+bitsandbytes
+trl
+# torch (install manually as shown above)
+# mamba-ssm (install manually from GitHub)
